--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: 'Khand', sans-serif;
     font-size: 4;
 }
+
 body {
     /* Evitar desplazamiento horizontal */
     overflow-x: hidden;
@@ -11,43 +12,58 @@ body {
 
 header {
     background: #006D77;
-    padding: 10px 0; /* Espaciado interior en la parte superior e inferior del header */
-    color: #fff; /* Color del texto en el header */
-    text-align: center; /* Centra horizontalmente el contenido */
+    padding: 10px 0;
+    /* Espaciado interior en la parte superior e inferior del header */
+    color: #fff;
+    /* Color del texto en el header */
+    text-align: center;
+    /* Centra horizontalmente el contenido */
     justify-content: space-between;
     position: relative;
-    height: 9.375rem /* Altura del header aumentada */
+    height: 7rem
+        /* Altura del header aumentada */
 }
 
 nav {
-    margin-top: 3rem;
-    justify-content: space-between; /* Distribuye los elementos a los extremos */
-    align-items: center; /* Centra verticalmente los elementos */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
 }
 
 nav a {
-    text-decoration: none; /* Elimina el subrayado de los enlaces */
-    color: #fff; /* Color del texto de los enlaces */
+    text-decoration: none;
+    /* Elimina el subrayado de los enlaces */
+    color: #fff;
+    /* Color del texto de los enlaces */
     font-size: 2rem;
+    /* Tamaño fuente */
     font-weight: bolder;
+    /*Grosor de la fuente (Negrita, etc)*/
 }
 
 ul {
-    list-style: none; /* Elimina los marcadores de lista */
+    list-style: none;
+    /* Elimina los marcadores de lista */
 }
 
 li {
     display: inline;
-    margin: 0 10px; /* Espacio entre los elementos del menú */
+    margin: 0 10px;
+    /* Espacio entre los elementos del menú */
 }
 
 .logo-item {
-    display: inline-block; /* Para que el logotipo esté en línea con los elementos del menú */
+    display: inline-block;
+    /* Para que el logotipo esté en línea con los elementos del menú */
 }
 
 .logo {
-    width: 50px; /* Ajusta el tamaño del logotipo según tus necesidades */
+    width: 6rem;
+    /* Ajusta el tamaño del logotipo según tus necesidades */
     height: auto;
+    color: white;
+    font-size: 4rem;
 }
 
 i {
@@ -56,30 +72,47 @@ i {
 }
 
 .icons-container {
-    float: right;
+    margin-top: 1rem;
+    margin-right: 25rem;
 }
 
-.icons{
+.icons {
     font-size: 1.5rem;
-}
-
-.first-section {
-    width: 100%;
+    margin: 0 10px;
 }
 
 .container {
     background-color: #EDF6F9;
     display: flex;
     width: 100%;
+    height: 300vh;
 }
 
+.first-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: red;
+}
 
+.first-text-container {
+    flex: 1;
+    text-align: left;
+}
 
 .video-container {
-    width: 100%;
-    
+    flex:2;
+    justify-content: center;
+    align-items: center;
+    width: 1rem;
+}
+
+.right-text-container {
+    flex: 1; /* Toma todo el espacio disponible en la parte derecha */
+    text-align: right; /* Alinea el texto a la derecha */
 }
 
 footer {
     background: #006D77;
+    display: flex;
 }
