--- a/styledia.css
+++ b/styledia.css
@@ -8,9 +8,10 @@ header {
     /* Centra horizontalmente el contenido */
     justify-content: space-between;
     position: relative;
-    height: 7rem
+    height: 7rem;
         /* Altura del header aumentada */
 }
+
 .rectangle-1 {
     position: absolute;
     width: 90%;
@@ -40,7 +41,6 @@ header {
     align-items: center;
     margin: 2rem 0;
     padding: 0 1rem;
-  
   }
   
   
