--- a/Carrito.css
+++ b/Carrito.css
@@ -84,6 +84,10 @@ i {
   /* Alinea los íconos a la derecha */
 }
 
+.show {
+  display: none;
+}
+
 .icons {
   font-size: 1.6rem;
   margin-left: 30px;
@@ -91,7 +95,7 @@ i {
 
 /*Cierre de Header*/
 
-/* Estilos Seccion 1 */
+/* Div Seccion 1 */
 .section-carrito {
   width: 80%;
   border-bottom: 3px solid rgba(232, 170, 147, 1);
@@ -355,17 +359,17 @@ i {
   width: 100%;
 }
 
-#section-total-a-pagar .total-a-pagar-p span{
+#section-total-a-pagar .total-a-pagar-p span {
   float: right;
-} 
+}
 
-#total-pagar-transporte{
+#total-pagar-transporte {
   border-bottom: 2px solid black;
 }
 
 /*Cierre total a pagar*/
 
-#hr-divisor-2{
+#hr-divisor-2 {
   border-bottom: 0.25rem solid rgba(232, 170, 147, 1);
   width: 80%;
   margin: auto;
@@ -391,7 +395,7 @@ i {
   margin-bottom: 1rem;
 }
 
-.form-payment-method div figure{
+.form-payment-method div figure {
   margin-left: 5rem;
 }
 
@@ -408,7 +412,7 @@ i {
   font-weight: 500;
 }
 
-#input-payment-method{
+#input-payment-method {
   margin-top: 3rem;
   margin-left: 40rem;
 }
@@ -515,5 +519,82 @@ button {
     height: 31rem;
     bottom: -74rem;
     background-color: #ffddd2;
+  }
+}
+
+/* Fin del footer */
+
+/* MEDIA QUERY RESPONSIVE*/
+/* Estilos para dispositivos móviles (pantallas de hasta 767px) */
+@media only screen and (max-width: 767px) {
+  body {
+    background-color: red;
+  }
+}
+
+/* Estilos para tabletas (pantallas de 768px a 1023px) */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  /* Header */
+  .show {
+    display: block;
+    font-size: xx-large;
+  }
+
+  .icons-container {
+    display: none;
+  }
+
+  /* Section productos */
+  .section-productos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #hr-divisor {
+    display: none;
+  }
+
+  .article-total-a-pagar {
+    width: 100%;
+    height: 100%;
+    margin-top: 60px;
+    border-top: 0.25rem solid rgba(232, 170, 147, 1);
+  }
+
+  /* Section paymenth method*/
+
+  .section-payment-method {
+    text-align: center; /* Centra el contenido en la tablet */
+  }
+
+  .form-payment-method {
+    max-width: 80%; /* Establece un ancho máximo para el formulario */
+    margin: 0 auto; /* Centra el formulario dentro de la sección */
+  }
+
+  /* Estilos específicos para los elementos dentro del formulario */
+  .form-payment-method div {
+    margin-bottom: 10px; /* Añade espacio entre los elementos */
+  }
+
+  #img-payment-methods {
+    max-width: 100%; /* Ajusta el tamaño de la imagen al 100% del contenedor */
+    height: auto; /* Mantiene la proporción original de la imagen */
+  }
+
+  #input-payment-method {
+    width: 12rem;
+    height: 5rem;
+    font-size: 40px;
+    margin: auto;
+    margin-top: 5rem;
+  }
+
+  .input-btn-codigo-promocional {
+    margin-left: 2rem;
+  }
+
+  .form-payment-method div figure {
+    margin-left: 40px;
   }
 }
