--- a/css/style.css
+++ b/css/style.css
@@ -10,27 +10,28 @@ body {
     overflow-x: hidden;
 }
 
+/* HEADER */
+
 header {
-    background: #006D77;
+    background: #006d77;
     padding: 10px 0;
     color: #fff;
     text-align: center;
     /* Centra horizontalmente el contenido */
     justify-content: space-between;
     position: relative;
-    height: 7rem
-}
-
-nav {
+    height: 8.2rem;
+  }
+  
+  nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
     /* Espaciado interno entre elementos */
-
-}
-
-nav a {
+  }
+  
+  nav a {
     text-decoration: none;
     /* Elimina el subrayado de los enlaces */
     color: #fff;
@@ -39,58 +40,65 @@ nav a {
     /* Tamaño fuente */
     font-weight: bolder;
     /*Grosor de la fuente (Negrita, etc)*/
-}
-
-ul {
+  }
+  
+  ul {
+    justify-content: center;
     list-style: none;
     display: flex;
     gap: 20px;
     /* Espacio entre elementos de la lista */
-    flex: 1;
+    flex: 6;
     /* Toma la parte central del espacio disponible */
     align-items: center;
     /* Alinea verticalmente los elementos de texto con el contenido del primer li (imagen) */
-}
-
-li {
+  }
+  
+  li {
     margin: 0;
     padding: 0;
-}
-
-.title-container {
-    flex: 1;
+  }
+  
+  .title-container {
+    flex: 3;
     /* Toma la primera parte del espacio disponible */
-}
-
-h1 {
+  }
+  
+  h1 {
     font-size: 3.2rem;
-
-}
-
-.logo {
+  }
+  
+  .logo {
     width: 6rem;
     /* Ajusta el tamaño del logotipo según tus necesidades */
     height: auto;
     color: white;
     font-size: 5rem;
-}
-
-i {
+  }
+  
+  i {
     color: white;
     z-index: 2;
-}
-
-.icons-container {
-    flex: 1;
+  }
+  
+  .icons-container {
+    flex: 3;
     /* Toma la tercera parte del espacio disponible */
     text-align: center;
     /* Alinea los íconos a la derecha */
-}
-
-.icons {
+  }
+  
+  .show {
+    display: none !important;
+   
+  }
+  
+  .icons {
     font-size: 1.6rem;
     margin-left: 30px;
-}
+  }
+  
+  /*Cierre de Header*/
 
 .container {
     background-color: #EDF6F9;
