--- a/form.css
+++ b/form.css
@@ -6,21 +6,95 @@
     font-family: 'Khand', sans-serif;
     font-size: 4;
 }
+/* HEADER */
 
 header {
-    background: #006D77;
-    padding: 10px 0px;
-    /* Espaciado interior en la parte superior e inferior del header */
+    background: #006d77;
+    padding: 10px 0;
     color: #fff;
-    /* Color del texto en el header */
     text-align: center;
     /* Centra horizontalmente el contenido */
     justify-content: space-between;
     position: relative;
-    height: 7rem;
-    /* Altura del header aumentada */
-
-}
+    height: 8.2rem;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    /* Espaciado interno entre elementos */
+  }
+  
+  nav a {
+    text-decoration: none;
+    /* Elimina el subrayado de los enlaces */
+    color: #fff;
+    /* Color del texto de los enlaces */
+    font-size: 1.7rem;
+    /* Tamaño fuente */
+    font-weight: bolder;
+    /*Grosor de la fuente (Negrita, etc)*/
+  }
+  
+  ul {
+    justify-content: center;
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    /* Espacio entre elementos de la lista */
+    flex: 6;
+    /* Toma la parte central del espacio disponible */
+    align-items: center;
+    /* Alinea verticalmente los elementos de texto con el contenido del primer li (imagen) */
+  }
+  
+  li {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .title-container {
+    flex: 3;
+    /* Toma la primera parte del espacio disponible */
+  }
+  
+  h1 {
+    font-size: 3.2rem;
+  }
+  
+  .logo {
+    width: 6rem;
+    /* Ajusta el tamaño del logotipo según tus necesidades */
+    height: auto;
+    color: white;
+    font-size: 5rem;
+  }
+  
+  i {
+    color: white;
+    z-index: 2;
+  }
+  
+  .icons-container {
+    flex: 3;
+    /* Toma la tercera parte del espacio disponible */
+    text-align: center;
+    /* Alinea los íconos a la derecha */
+  }
+  
+  .show {
+    display: none !important;
+   
+  }
+  
+  .icons {
+    font-size: 1.6rem;
+    margin-left: 30px;
+  }
+  
+  /*Cierre de Header*/
 
 
 
@@ -67,6 +141,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-bottom: 1rem;
 }
 
 .form-subgroup input {
@@ -83,8 +158,6 @@ body {
 .cuenta{
     padding-left: 5px;
 }
-
-
 
 
 .form-submit {
@@ -122,7 +195,7 @@ p {
 }
 
 main {
-    background-image: url(img/imagenECommerceRegister.jpg);
+    background-image: url(./media/floresloto.jpeg);
     background-size: cover;
     height: 100vh;
     color: black;
@@ -135,20 +208,64 @@ main {
 }
 
 
+/* ----------------- FOOTER ----------------- */
 footer {
-    background: #006D77;
+    height: auto;
     display: flex;
-    color: white;
-    height: 13rem;
+    justify-content: space-around;
+    align-items: flex-start;
+    background: #006D77;
+}
+  
+.left-div {
+    width: 40%;
+    font-size: large;
+    color: #fff;
+    padding: 50px;
+}
+  
+.right-div {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
+.input-container {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size:x-large;
+    font-weight: bolder;
+    margin: 50px;
+}
+
+footer label {
+    display: block;
+}
+
+footer input {
+    width: 80%;
+    height: 37px;
+}
+
+footer button {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.social-media-icons {
+    font-size: 3em;
+    margin-left: 60%;
+    margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-    /* Estilos para pantallas con un ancho mínimo de 768px y un ancho máximo de 1024px */
-    /* Aquí puedes agregar los estilos que deseas aplicar en pantallas medianas */
-    footer{
-        background-color: red;
-    }
+    header{
+        width: auto;
+      }
   }
   
 @media screen and (max-width: 768px) {
