--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@ nav a {
     /* Elimina el subrayado de los enlaces */
     color: #fff;
     /* Color del texto de los enlaces */
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     /* TamaÃ±o fuente */
-    font-weight: bolder;
+    font-weight: bold;
     /*Grosor de la fuente (Negrita, etc)*/
 }
 
@@ -119,7 +119,7 @@ i {
 .video-container {
     max-width: 320px;
     transition: max-width 1s, padding 1s, margin 1s;
-    background:#E29578;
+    background: #E29578;
     padding: 0px;
     /* Cambia el color para resaltar el Ã¡rea */
     flex: 2;
@@ -129,13 +129,14 @@ i {
     width: 500px;
     height: 600px;
 }
-/* FULLSCREEN clase aÃ±adida POSTERIORMENTE por medio de JS */
+
+/* FULLSCREEN clase agnadida POSTERIORMENTE por medio de JS */
 .video-container.fullscreen {
     padding: 0;
     margin: 0;
-    background:#E29578;
+    background: #E29578;
     max-width: 60em;
-    height: 30em ;
+    height: 30em;
     /* TamaÃ±o del video al hacer clic en Ã©l (el doble del tamaÃ±o inicial) */
     cursor: pointer;
     transition: max-width 1s, padding 1s, margin 1s;
@@ -157,7 +158,8 @@ video.play-video {
 .video-image {
     color: #E29578;
 
-} 
+}
+
 /*---------------------- Estilos texto derecha --------------------------- */
 .right-text-container {
     /* Cambia el color para resaltar el Ã¡rea */
@@ -177,7 +179,7 @@ video.play-video {
 }
 
 .right-text {
-    background:#E29578;
+    background: #E29578;
     padding: 8px;
     font-size: 2.8em;
     /* Cambia el color para resaltar el Ã¡rea */
@@ -200,8 +202,9 @@ video.play-video {
 
 /* Estilo para mostrar la imagen */
 .logo-animation.show {
-    transform: translateX(0); /* La imagen se desplaza desde la derecha hacia su posiciÃ³n original */
-   
+    transform: translateX(0);
+    /* La imagen se desplaza desde la derecha hacia su posiciÃ³n original */
+
 }
 
 .lines-container {
@@ -259,7 +262,8 @@ video.play-video {
     width: 795px;
     /* Longitud de la tercera lÃ­nea */
 }
-/* ------------------ Estilos Slider ------------------- */
+
+/* ------------------ Estilos Slider (FIST SECTION) ------------------- */
 .slider {
     width: 100%;
     display: flex;
@@ -267,12 +271,11 @@ video.play-video {
     align-items: center;
     margin-left: 10px;
     margin-right: 10px;
-
 }
 
 .slide-container {
     width: 300px;
-    background-color: #E29578;
+    background-color: #83C5BE;
     box-shadow: 2px 2px 30 px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     overflow: hidden;
@@ -375,6 +378,8 @@ video.play-video {
     }
 
 }
+
+
 /* ------------------------ SECOND SECTION (primer hover)-------------------- */
 /* Estilos de la imagen alineada a la derecha */
 .second-section {
@@ -382,7 +387,7 @@ video.play-video {
     height: 25%;
     position: relative;
     overflow: hidden;
-    margin-top:70px;
+    margin-top: 70px;
 }
 
 .image-container {
@@ -400,6 +405,7 @@ video.play-video {
     width: 40em;
     height: auto;
     transition: transform 0.3s;
+    z-index: 2;
 }
 
 .hover-text {
@@ -408,12 +414,13 @@ video.play-video {
     left: 100%;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(226, 149, 120, 0.7);
     color: #fff;
     font-size: 2.2em;
     text-align: right;
     justify-content: flex-end;
     transition: left 0.3s;
+    z-index: 0;
 }
 
 .image-container:hover .hover-image {
@@ -433,7 +440,7 @@ video.play-video {
     overflow: hidden;
     margin-top: 70px;
 }
-  
+
 .left-image-container {
     position: relative;
     width: 100%;
@@ -442,52 +449,54 @@ video.play-video {
     align-items: center;
     overflow: hidden;
 }
-  
+
 .left-hover-content {
     position: relative;
     flex: 1;
     display: flex;
     overflow: hidden;
-    
+
 }
-  
+
 .left-hover-image {
     width: 40em;
     height: auto;
     padding: 50px;
     transition: transform 0.3s;
 }
-  
+
 .left-hover-text {
     position: absolute;
     top: 0;
     right: 100%;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(131, 197, 190, 0.7);
+    /* Utiliza los valores RGB de #83C5BE y establece la opacidad */
     color: #fff;
+    /* Color del texto, puedes ajustarlo según tus necesidades */
     flex-direction: column;
     text-align: left;
     font-size: 2.2em;
-    transition: right 0.3s; 
+    transition: right 0.3s;
 }
 
 .left-description-title {
-  display: block;
-  margin-top:80px;
-  margin-left: 30px;
+    display: block;
+    margin-top: 80px;
+    margin-left: 30px;
 }
 
 .left-description {
     display: block;
     margin-left: 30px;
-   
+
 }
-  
+
 .left-image-container:hover .left-hover-image {
     transform: translateX(100%);
 }
-  
+
 .left-image-container:hover .left-hover-text {
     right: 0;
 }
@@ -495,7 +504,7 @@ video.play-video {
 
 
 
- /* ----------------- FOOTER ----------------- */
+/* ----------------- FOOTER ----------------- */
 footer {
     height: auto;
     display: flex;
@@ -503,14 +512,14 @@ footer {
     align-items: flex-start;
     background: #006D77;
 }
-  
+
 .left-div {
     width: 40%;
     font-size: large;
     color: #fff;
     padding: 50px;
 }
-  
+
 .right-div {
     display: flex;
     width: 60%;
@@ -521,7 +530,7 @@ footer {
 .input-container {
     margin-bottom: 10px;
     padding: 10px;
-    font-size:x-large;
+    font-size: x-large;
     font-weight: bolder;
     margin: 50px;
 }
@@ -548,5 +557,3 @@ button {
     margin-left: 60%;
     margin-bottom: 30px;
 }
-  
-  
