--- a/css/car.css
+++ b/css/car.css
@@ -291,6 +291,7 @@ i {
   display: flex;
   justify-content: space-around;
 }
+
 #input-codigo-promocional {
   display: flex;
   width: 34.813rem;
@@ -472,6 +473,107 @@ button {
   margin-bottom: 30px;
 }
 
+/* 
+/* Fin del footer */
+
+/* MEDIA QUERY RESPONSIVE*/
+
+@media only screen and (max-width: 1023px) {
+
+  /* Header */
+  .show {
+    display: block;
+    font-size: xx-large;
+  }
+
+  .icons-container {
+    display: none;
+  }
+
+  ul {
+    display: none;
+  }
+
+  .logo-container {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 50px;
+  }
+
+  /* Section productos */
+  .section-productos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #hr-divisor {
+    display: none;
+  }
+
+  .article-total-a-pagar {
+    width: 100%;
+    height: 100%;
+    margin-top: 60px;
+    border-top: 0.25rem solid rgba(232, 170, 147, 1);
+  }
+
+  /* Section paymenth method*/
+
+  .section-payment-method {
+    text-align: center;
+    /* Centra el contenido en la tablet */
+  }
+
+  .form-payment-method {
+    max-width: 80%;
+    /* Establece un ancho máximo para el formulario */
+    margin: 0 auto;
+    /* Centra el formulario dentro de la sección */
+  }
+
+  /* Estilos específicos para los elementos dentro del formulario */
+  .form-payment-method div {
+    margin-bottom: 10px;
+    /* Añade espacio entre los elementos */
+  }
+
+  #img-payment-methods {
+    max-width: 100%;
+    /* Ajusta el tamaño de la imagen al 100% del contenedor */
+    height: auto;
+    /* Mantiene la proporción original de la imagen */
+  }
+
+  #input-payment-method {
+    width: 12rem;
+    height: 5rem;
+    font-size: 40px;
+    margin: auto;
+    margin-top: 5rem;
+  }
+
+  .input-btn-codigo-promocional {
+    margin-left: 2rem;
+  }
+
+  .form-payment-method div figure {
+    margin-left: 40px;
+  }
+
+  .social-media-icons {
+    font-size: 2em;
+    margin-left: 0px;
+    margin-bottom: 10px;
+  }
+  
+  .left-div p {
+    font-size: 1rem;
+  }
+}
+
+
+/*
+
 @media screen and (min-width: 768px) {
   .rectangle-1 {
     width: 50%;
@@ -520,81 +622,4 @@ button {
     bottom: -74rem;
     background-color: #ffddd2;
   }
-}
-
-/* Fin del footer */
-
-/* MEDIA QUERY RESPONSIVE*/
-/* Estilos para dispositivos móviles (pantallas de hasta 767px) */
-@media only screen and (max-width: 767px) {
-  body {
-    background-color: red;
-  }
-}
-
-/* Estilos para tabletas (pantallas de 768px a 1023px) */
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
-  /* Header */
-  .show {
-    display: block;
-    font-size: xx-large;
-  }
-
-  .icons-container {
-    display: none;
-  }
-
-  /* Section productos */
-  .section-productos {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #hr-divisor {
-    display: none;
-  }
-
-  .article-total-a-pagar {
-    width: 100%;
-    height: 100%;
-    margin-top: 60px;
-    border-top: 0.25rem solid rgba(232, 170, 147, 1);
-  }
-
-  /* Section paymenth method*/
-
-  .section-payment-method {
-    text-align: center; /* Centra el contenido en la tablet */
-  }
-
-  .form-payment-method {
-    max-width: 80%; /* Establece un ancho máximo para el formulario */
-    margin: 0 auto; /* Centra el formulario dentro de la sección */
-  }
-
-  /* Estilos específicos para los elementos dentro del formulario */
-  .form-payment-method div {
-    margin-bottom: 10px; /* Añade espacio entre los elementos */
-  }
-
-  #img-payment-methods {
-    max-width: 100%; /* Ajusta el tamaño de la imagen al 100% del contenedor */
-    height: auto; /* Mantiene la proporción original de la imagen */
-  }
-
-  #input-payment-method {
-    width: 12rem;
-    height: 5rem;
-    font-size: 40px;
-    margin: auto;
-    margin-top: 5rem;
-  }
-
-  .input-btn-codigo-promocional {
-    margin-left: 2rem;
-  }
-
-  .form-payment-method div figure {
-    margin-left: 40px;
-  }
-}
+} */
