--- a/css/login.css
+++ b/css/login.css
@@ -266,13 +266,44 @@ footer button {
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
+
+  /*HEADER*/
   header {
     width: auto;
   }
-}
 
-@media screen and (max-width: 768px) {
-  /* Estilos para pantallas con un ancho máximo de 768px */
-  /* Aquí puedes agregar los estilos que deseas aplicar en pantallas más pequeñas */
+  .show {
+    display: block !important;
+    font-size: xx-large;
+  }
+
+  .icons-container {
+    display: none;
+  }
+
+  #menu-list {
+    display: none;
+  }
+
+  .logo-container {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 50px;
+  }
+  /*FORM*/
+  .form-container {
+    width: 100%;
+    margin: 0 auto;
+   }
+
+  /*FOOTER*/
+  .social-media-icons {
+    font-size: 2em;
+    margin-left: 0px;
+    margin-bottom: 10px;
+  }
+  .left-div p {
+    font-size: 1rem;
+  }
 }
