--- a/css/styledia.css
+++ b/css/styledia.css
@@ -1,11 +1,12 @@
 * {
   font-family: 'Khand', sans-serif;
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Khand', sans-serif;
-    font-size: 4;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Khand', sans-serif;
+  font-size: 4;
 
 }
+
 /* HEADER */
 
 header {
@@ -86,7 +87,7 @@ i {
 
 .show {
   display: none !important;
- 
+
 }
 
 .icons {
@@ -95,105 +96,109 @@ i {
 }
 
 /*Cierre de Header*/
+
 /* Comienzo section*/
 .rectangle-1 {
-    position: absolute;
-    width: 50%;
-    height: 17rem;
-    top: 10rem;
-    right: 0;
-    background-color: #ffddd2;
-    z-index: -100;
-      
-  }
+  position: absolute;
+  width: 50%;
+  height: 17rem;
+  top: 10rem;
+  right: 0;
+  background-color: #ffddd2;
+  z-index: -100;
+
+}
 
 
 .h1-day {
-    font-family: "Khand-Medium", Helvetica;
-    font-weight: 500;
-    color: #000000;
-    font-size: 6rem;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: 1.5;
-  }
-  
+  font-family: "Khand-Medium", Helvetica;
+  font-weight: 500;
+  color: #000000;
+  font-size: 6rem;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 1.5;
+}
+
 
 .section-a {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    margin: 4rem 0;
-    padding: 0 4rem;
-  }
-  .section-b{
-    display: flex;
-    flex-direction: row;
-  }
-  
-.align-figure{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin: 4rem 0;
+  padding: 0 4rem;
+}
+
+.section-b {
+  display: flex;
+  flex-direction: row;
+}
+
+.align-figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .image-day {
   width: 18.75rem;
   height: 21.25rem;
-  }
+}
 
 
-.text-day{
+.text-day {
 
-        font-family: "Khand-Regular", Helvetica;
-        color: #000000;
-        font-size: 24px;
-        letter-spacing: 0;
-        line-height: normal;
-        width: 50%;
-   
-    
+  font-family: "Khand-Regular", Helvetica;
+  color: #000000;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+  width: 50%;
+
+
 }
 
 .info-a {
-    font-family: "Khand-Regular", Helvetica;
-    color: #000000;
-    font-size: 22px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .button-add {
-    background-color: #006d77;
-    color: #ffffff;
-    width: 18.375rem;
-    height: 3.063rem;
-    text-align: center;
-    font-family: "Khand-Regular", Helvetica;
-    font-size: 2rem;
-    border-radius: 1.563rem;
-  }
-  
+  font-family: "Khand-Regular", Helvetica;
+  color: #000000;
+  font-size: 22px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.button-add {
+  background-color: #006d77;
+  color: #ffffff;
+  width: 18.375rem;
+  height: 3.063rem;
+  text-align: center;
+  font-family: "Khand-Regular", Helvetica;
+  font-size: 2rem;
+  border-radius: 1.563rem;
+}
+
 
 .rectangle-2 {
-    position: absolute;
-    width: 50%;
-    height: 31rem;
-    bottom: -74rem; /* hay que corregir esto*/
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ffddd2;
-    z-index: -100;
-  }
-
-  
-footer {
-    background: #006D77;
-    display: flex;
-    height: 7rem;
+  position: absolute;
+  width: 50%;
+  height: 31rem;
+  bottom: -74rem;
+  /* hay que corregir esto*/
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffddd2;
+  z-index: -100;
 }
+
+
+footer {
+  background: #006D77;
+  display: flex;
+  height: 7rem;
+}
+
 /*------------------------FOOTER---------------------*/
 footer {
   height: auto;
@@ -220,7 +225,7 @@ footer {
 .input-container {
   margin-bottom: 10px;
   padding: 10px;
-  font-size:x-large;
+  font-size: x-large;
   font-weight: bolder;
   margin: 50px;
 }
@@ -247,11 +252,14 @@ button {
   margin-left: 60%;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 767px) and (max-width: 1023px)
-{
-  header{
+/*-------------------- RESPONSIVE ---------------------*/
+@media screen and (max-width: 1023px) {
+
+  /*HEADER*/
+  header {
     width: auto;
   }
+
   .show {
     display: block !important;
     font-size: xx-large;
@@ -261,16 +269,18 @@ button {
     display: none;
   }
 
-  ul{
-     display: none;
+  ul {
+    display: none;
   }
 
-  .logo-container{
+  .logo-container {
     position: absolute;
     margin-left: 10px;
+    margin-top: 50px;
   }
 
-  .section-a{
+  /*SECTIONS*/
+  .section-a {
     display: flex;
     flex-direction: column;
   }
@@ -278,72 +288,62 @@ button {
   .section-b {
     display: flex;
     flex-direction: column-reverse;
-  } 
+  }
+
+  .social-media-icons {
+    font-size: 2em;
+    margin-left: 0px;
+    margin-bottom: 10px;
+  }
+
+  /*FOOTER*/
+  .social-media-icons {
+    font-size: 2em;
+    margin-left: 0px;
+    margin-bottom: 10px;
+  }
+
+  .left-div p {
+    font-size: 1rem;
+  }
 }
+
 @media screen and (max-width: 767px) {
-  
-  header{
-    width: auto;
-  }
-  .show {
-    display: block !important;
-    font-size: xx-large;
-  }
-  .icons-container {
-    display: none;
-  }
-  
   .rectangle-1 {
-  width: 0%;
-  background: none;
-     
-  }
-  
-    .h1-day {
-      font-size: 4rem;
-      line-height: 1.2;
-    }
-   
-    .section-a {
-      margin: 4rem 0;
-      padding: 0 4rem;
-    }
-    .section-b {
-      display: flex;
-      flex-direction: column-reverse;
-    } 
-    .image-day {
-        width: 18.75rem;
-        height: 21.25rem;
-    }
-
-    .text-day{
-
-        font-family: "Khand-Regular", Helvetica;
-        color: #000000;
-        font-size: 24px;
-        letter-spacing: 0;
-        line-height: normal;
-        width: 50%;
-    
-    }
-
-    .info-a {
-        font-size: 22px;
-    }
-
-    .rectangle-2 {
     width: 0%;
     background: none;
-    }
-
-    ul{
-      display: none;
-   }
-   .logo-container{
-    position: absolute;
-    margin-left: 10px;
-    margin-top: 50px;
-  }
   }
 
+  .h1-day {
+    font-size: 4rem;
+    line-height: 1.2;
+  }
+
+  .section-a {
+    margin: 4rem 0;
+    padding: 0 4rem;
+  }
+
+  .image-day {
+    width: 18.75rem;
+    height: 21.25rem;
+  }
+
+  .text-day {
+    font-family: "Khand-Regular", Helvetica;
+    color: #000000;
+    font-size: 24px;
+    letter-spacing: 0;
+    line-height: normal;
+    width: 50%;
+  }
+
+  .info-a {
+    font-size: 22px;
+  }
+
+  .rectangle-2 {
+    width: 0%;
+    background: none;
+  }
+}
