--- a/css/car.css
+++ b/css/car.css
@@ -417,8 +417,66 @@ i {
   margin-top: 3rem;
   margin-left: 40rem;
 }
+/* ----------------- ESTILOS MENU HAMBURGUESA ----------------- */
+.hidden-container {
+  position: relative;
+}
 
-/* Footer Estilos */
+.hidden-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(0, 109, 119, 0.9); /* Fondo semi-transparente */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 999; /* Ajusta el índice z para asegurarte de que esté por encima de otros elementos */
+}
+
+.hidden-list li {
+  padding: 20px;
+  text-align: center;
+  font-size: 1.5em; /* Aumenta el tamaño de la fuente en un 50% */
+  font-weight: bold; /* Aumenta el grosor de la fuente */
+  position: relative;
+  color: #fff; /* Color del texto */
+}
+
+.hidden-list li:hover {
+  background: linear-gradient(to bottom, rgba(226, 149, 120, 0.9), rgba(226, 149, 120, 0.6));
+}
+
+.hidden-list li::before,
+.hidden-list li::after {
+  content: "";
+  position: absolute;
+  height: 5px; /* Grosor de las líneas de sombra */
+  background-color: rgba(226, 149, 120, 0.5); /* Color semi-transparente basado en #e29578 para las sombras chulas */
+  width: calc(100% + 40px); /* Ancho ajustado para extenderse más allá del contenido del li */
+  left: -20px; /* Desplaza a la izquierda la mitad del ancho adicional */
+}
+
+.hidden-list li::before {
+  top: 0;
+}
+
+.hidden-list li::after {
+  bottom: 0;
+}
+
+.show:hover {
+  cursor: pointer;
+  background-color: #83C5BE;
+  padding: 10px;
+  border-radius: 10px;
+}
+/* ----------------- FINAL ESTILOS MENU HAMBURGUESA ----------------- */
+
+/* ----------------- FOOTER ----------------- */
+
 
 footer {
   height: auto;
@@ -572,54 +630,3 @@ button {
 }
 
 
-/*
-
-@media screen and (min-width: 768px) {
-  .rectangle-1 {
-    width: 50%;
-    height: 17rem;
-    top: 10rem;
-    background-color: #ffddd2;
-  }
-
-  .h1-day {
-    font-size: 6rem;
-    line-height: 1.5;
-  }
-
-  .section-a {
-    margin: 4rem 0;
-    padding: 0 4rem;
-  }
-
-  .image-day {
-    width: 18.75rem;
-    height: 21.25rem;
-  }
-
-  .text-day {
-    font-family: "Khand-Regular", Helvetica;
-    color: #000000;
-    font-size: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-
-  .info-a {
-    font-size: 22px;
-  }
-
-  .button-add {
-    width: 18.375rem;
-    height: 3.063rem;
-    font-size: 2rem;
-    border-radius: 1.563rem;
-  }
-
-  .rectangle-2 {
-    width: 50%;
-    height: 31rem;
-    bottom: -74rem;
-    background-color: #ffddd2;
-  }
-} */
