--- a/css/login.css
+++ b/css/login.css
@@ -210,6 +210,66 @@ p {
 .form-line {
   margin-bottom: 2rem;
 }
+/* ----------------- ESTILOS MENU HAMBURGUESA ----------------- */
+.hidden-container {
+  position: relative;
+}
+
+.hidden-list {
+  list-style-type: none;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(0, 109, 119, 0.9); /* Fondo semi-transparente */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 999; /* Ajusta el índice z para asegurarte de que esté por encima de otros elementos */
+}
+
+.hidden-list li {
+  padding: 20px;
+  text-align: center;
+  font-size: 0.8em; /* Aumenta el tamaño de la fuente en un 50% */
+  font-weight: bold; /* Aumenta el grosor de la fuente */
+  position: relative;
+  color: #fff; /* Color del texto */
+}
+
+.hidden-list li:hover {
+  background: linear-gradient(to bottom, rgba(226, 149, 120, 0.9), rgba(226, 149, 120, 0.6));
+}
+
+.hidden-list li::before,
+.hidden-list li::after {
+  content: "";
+  position: absolute;
+  height: 5px; /* Grosor de las líneas de sombra */
+  background-color: rgba(226, 149, 120, 0.5); /* Color semi-transparente basado en #e29578 para las sombras chulas */
+  width: calc(100% + 40px); /* Ancho ajustado para extenderse más allá del contenido del li */
+  left: -20px; /* Desplaza a la izquierda la mitad del ancho adicional */
+}
+
+.hidden-list li::before {
+  top: 0;
+}
+
+.hidden-list li::after {
+  bottom: 0;
+}
+
+.show:hover {
+  cursor: pointer;
+  background-color: #83C5BE;
+  padding: 10px;
+  border-radius: 10px;
+}
+/* ----------------- FINAL ESTILOS MENU HAMBURGUESA ----------------- */
+
 
 
 /* ----------------- FOOTER ----------------- */
